--- a/New Project/nodejs-express-sequelize-mysql/package.json
+++ b/New Project/nodejs-express-sequelize-mysql/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cjs": "0.0.11",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "multer": "^1.4.3",
