--- a/New Project/nodejs-express-sequelize-mysql/package.json
+++ b/New Project/nodejs-express-sequelize-mysql/package.json
@@ -12,9 +12,11 @@
     "bcrypt": "^5.0.1",
     "cjs": "0.0.11",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "multer": "^1.4.3",
     "mysql2": "^2.3.0",
+    "nodemailer": "^6.6.3",
     "read-excel-file": "^5.2.9",
     "sequelize": "^6.6.5",
     "validator": "^13.6.0",
